--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,7 @@ COPY . .
 RUN apt-get update && \
     apt-get install -y git && \
     apt-get clean
-RUN pip install "poetry"
+RUN pip install poetry
 RUN poetry config virtualenvs.create false
 ENV PYTHONPATH=/workspace/app:${PYTHONPATH}
 RUN poetry install --no-root
